--- a/week_2_data_ingestion/airflow_local/docker-compose.yaml
+++ b/week_2_data_ingestion/airflow_local/docker-compose.yaml
@@ -58,27 +58,23 @@ x-airflow-common:
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKEND: 'airflow.api.auth.backend.basic_auth'
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
-    #GOOGLE_APPLICATION_CREDENTIALS: /.google/credentials/google_credentials.json
-    GOOGLE_APPLICATION_CREDENTIALS: /.gc/ny-rides.json
-    #AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT: 'google-cloud-platform://?extra__google_cloud_platform__key_path=/.google/credentials/google_credentials.json'
-    AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT: 'google-cloud-platform://?extra__google_cloud_platform__key_path=/.gc/ny-rides.json'
-
+    GOOGLE_APPLICATION_CREDENTIALS: /.google/credentials/google_credentials.json
+    AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT: 'google-cloud-platform://?extra__google_cloud_platform__key_path=/.google/credentials/google_credentials.json'
     # TODO: Please change GCP_PROJECT_ID & GCP_GCS_BUCKET, as per your config
     GCP_PROJECT_ID: 'copper-cider-354421'
     GCP_GCS_BUCKET: 'dtc_data_lake_copper-cider-354421'
 
-    # PG_HOST: "${PG_HOST}"
-    # PG_USER: "${PG_USER}"
-    # PG_PASSWORD: "${PG_PASSWORD}"
-    # PG_PORT: "${PG_PORT}"
-    # PG_DATABASE: "${PG_DATABASE}"
+    PG_HOST: "${PG_HOST}"
+    PG_USER: "${PG_USER}"
+    PG_PASSWORD: "${PG_PASSWORD}"
+    PG_PORT: "${PG_PORT}"
+    PG_DATABASE: "${PG_DATABASE}"
 
   volumes:
-    - ./dags:/opt/airflow/dags
+    - ./dags_local:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
-    #- ~/.google/credentials/:/.google/credentials:ro
-    - ~/.gc/:/.gc:ro
+    - ~/.google/credentials/:/.google/credentials:ro
 
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
