week 2 homework data_ingestion_gcs_dag created, dag not functional

--- a/week_2_data_ingestion/airflow_homework/docker-compose.yaml
+++ b/week_2_data_ingestion/airflow_homework/docker-compose.yaml
@@ -74,7 +74,7 @@ x-airflow-common:
     # PG_DATABASE: "${PG_DATABASE}"
 
   volumes:
-    - ./dags:/opt/airflow/dags
+    - ./dags:/opt/airflow_homework/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
     #- ~/.google/credentials/:/.google/credentials:ro
