--- a/week_3_data_warehouse/airflow/.env_example
+++ b/week_3_data_warehouse/airflow/.env_example
@@ -1,10 +1,10 @@
 # Custom
 COMPOSE_PROJECT_NAME=dtc-de
-GOOGLE_APPLICATION_CREDENTIALS=/.google/credentials/google_credentials.json
-AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT=google-cloud-platform://?extra__google_cloud_platform__key_path=/.google/credentials/google_credentials.json
+GOOGLE_APPLICATION_CREDENTIALS=/.gc/ny-rides.json
+AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT=google-cloud-platform://?extra__google_cloud_platform__key_path=/.gc/ny-rides.json
 # AIRFLOW_UID=
-GCP_PROJECT_ID=
-GCP_GCS_BUCKET=
+GCP_PROJECT_ID: 'copper-cider-354421'
+GCP_GCS_BUCKET: 'dtc_data_lake_copper-cider-354421'
 
 # Postgres
 POSTGRES_USER=airflow
