--- a/week_3_data_warehouse/airflow/docker-compose.yaml
+++ b/week_3_data_warehouse/airflow/docker-compose.yaml
@@ -58,18 +58,21 @@ x-airflow-common:
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKEND: 'airflow.api.auth.backend.basic_auth'
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
-    GOOGLE_APPLICATION_CREDENTIALS: /.google/credentials/google_credentials.json
-    AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT: 'google-cloud-platform://?extra__google_cloud_platform__key_path=/.google/credentials/google_credentials.json'
+    # GOOGLE_APPLICATION_CREDENTIALS: /.google/credentials/google_credentials.json
+    GOOGLE_APPLICATION_CREDENTIALS: /.gc/ny-rides.json
+    #AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT: 'google-cloud-platform://?extra__google_cloud_platform__key_path=/.google/credentials/google_credentials.json'
+    AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT: 'google-cloud-platform://?extra__google_cloud_platform__key_path=/.gc/ny-rides.json'
 
     # TODO: Please change GCP_PROJECT_ID & GCP_GCS_BUCKET, as per your config
-    GCP_PROJECT_ID: 'pivotal-surfer-336713'
-    GCP_GCS_BUCKET: 'dtc_data_lake_pivotal-surfer-336713'
+    GCP_PROJECT_ID: 'copper-cider-354421'
+    GCP_GCS_BUCKET: 'dtc_data_lake_copper-cider-354421'
 
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
-    - ~/.google/credentials/:/.google/credentials:ro
+    #- ~/.google/credentials/:/.google/credentials:ro
+    - ~/.gc/:/.gc:ro
 
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
