update gitignore to include csv seed files in week4 dbt project

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ serving_dir
 *.csv
 .ipynb_checkpoints/
 !week_6_stream_processing/avro_example/data/rides.csv
+!week_4_analytics_engineering/taxi_rides_ny/seeds/taxi_zone_lookup.csv
+!week_4_analytics_engineering/taxi_rides_ny/data/taxi_zone_lookup.csv
