--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 **/ny_taxi_postgres_data/*
 serving_dir
 *.csv
+*.parquet
+*.crc
 .ipynb_checkpoints/
 !week_6_stream_processing/avro_example/data/rides.csv
 !week_4_analytics_engineering/taxi_rides_ny/seeds/taxi_zone_lookup.csv
