--- a/week_2_data_ingestion/homework/airflow/docker-compose.yaml
+++ b/week_2_data_ingestion/homework/airflow/docker-compose.yaml
@@ -64,8 +64,8 @@ x-airflow-common:
     AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT: 'google-cloud-platform://?extra__google_cloud_platform__key_path=/.gc/ny-rides.json'
 
     # TODO: Please change GCP_PROJECT_ID & GCP_GCS_BUCKET, as per your config
-    GCP_PROJECT_ID: 'copper-cider-354421'
-    GCP_GCS_BUCKET: 'dtc_data_lake_copper-cider-354421'
+    GCP_PROJECT_ID: 'dtc-de-368104'
+    GCP_GCS_BUCKET: 'dtc_data_lake_dtc-de-368104'
 
     # PG_HOST: "${PG_HOST}"
     # PG_USER: "${PG_USER}"
