--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ serving_dir
 !week_6_stream_processing/avro_example/data/rides.csv
 !week_4_analytics_engineering/taxi_rides_ny/seeds/taxi_zone_lookup.csv
 !week_4_analytics_engineering/taxi_rides_ny/data/taxi_zone_lookup.csv
+*_SUCCESS
