--- a/week_1_basics_n_setup/2_docker_sql/docker-compose.yaml
+++ b/week_1_basics_n_setup/2_docker_sql/docker-compose.yaml
@@ -24,4 +24,45 @@ services:
 #   airflow:
 #     external:
 #       name: airflow_local_default
-    
+
+# docker run \
+#   -e POSTGRES_PASSWORD=root \
+#   -e POSTGRES_USER=root \
+#   -e POSTGRES_DB=ny_taxi \
+#   -p 5432:5432 \
+#   -v ny_taxi_postgres_data:/var/lib/postgresql/data \
+#   --network=pg-network \
+#   --name=pg-database \
+#   -d postgres:13
+
+# docker run \
+#   -e PGADMIN_DEFAULT_EMAIL=admin@admin.com \
+#   -e PGADMIN_DEFAULT_PASSWORD=root \
+#   -p 8080:80 \
+#   --network=pg-network \
+#   --name=pgadmin \
+#   -d dpage/pgadmin4
+
+# URL="https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-01.parquet"
+
+# python ingest_data.py \
+#   --user=root \
+#   --password=root \
+#   --host=localhost \
+#   --port=5432 \
+#   --db=ny_taxi \
+#   --table_name=yellow_taxi_data \
+#   --url=${URL}
+
+# docker build -t taxi_ingest:v001 . 
+
+# docker run -it \
+#   --network=pg-network \
+#   taxi_ingest:v001 \
+#     --user=root \
+#     --password=root \
+#     --host=pg-database \
+#     --port=5432 \
+#     --db=ny_taxi \
+#     --table_name=yellow_taxi_data \
+#     --url=${URL} 
